--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-06-18  Philip Lafleur  <plafleur@cvs.gnome.org>
 
+	* app/tools/gimpfuzzyselecttool.c: Fix fuzzy select menu label.
+
+2004-06-18  Philip Lafleur  <plafleur@cvs.gnome.org>
+
 	* app/tools/gimptransformtool.c (gimp_transform_tool_bounds):
 	If transforming a path, use the path bounds rather than the mask
 	bounds. Fixes bug #144570.
