2004-06-18  Philip Lafleur  <plafleur@cvs.gnome.org>
	* app/tools/gimptransformtool.c: reverted my fix to bug #144570.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13683 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-06-18  Philip Lafleur  <plafleur@cvs.gnome.org>
 
+	* app/tools/gimptransformtool.c: reverted my fix to bug #144570.
+
+2004-06-18  Philip Lafleur  <plafleur@cvs.gnome.org>
+
 	* app/tools/gimpfuzzyselecttool.c: Fix fuzzy select menu label.
 
 2004-06-18  Philip Lafleur  <plafleur@cvs.gnome.org>
