--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2004-06-18 Bill Skaggs  <weskaggs@primate.ucdavis.edu>
+
+	* plug-ins/common/jpeg.c:  redid save dialog along lines suggested
+	in bug # 138929
+
+	Only create an exif data parasite on loading file if the file actually 
+	contains exif data.
+
+	Call exif data parasite "exif-data" instead of "jpeg-exif-data",
+	because it should be interchangeable with TIFF exif data.
+	
 2004-06-18  Michael Natterer  <mitch@gimp.org>
 
 	* app/actions/context-actions.c
