2004-06-18  Manish Singh  <yosh@gimp.org>
        * plug-ins/common/film.c: Don't use deprecated gimp_text functions,
        clean up font name string handling a bit, default is now "Monospace"
        instead of "Courier".


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13690 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-06-18  Manish Singh  <yosh@gimp.org>
+
+	* plug-ins/common/film.c: Don't use deprecated gimp_text functions,
+	clean up font name string handling a bit, default is now "Monospace"
+	instead of "Courier".
+
 2004-06-19  Michael Natterer  <mitch@gimp.org>
 
 	* app/widgets/gimpcontrollers.c (gimp_controllers_event_mapped):
