2004-06-19  Sven Neumann  <sven@gimp.org>
	* devel-docs/parasites.txt: document "exif-data" parasite.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13691 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-19  Sven Neumann  <sven@gimp.org>
+
+	* devel-docs/parasites.txt: document "exif-data" parasite.
+
 2004-06-18  Manish Singh  <yosh@gimp.org>
 
 	* plug-ins/common/film.c: Don't use deprecated gimp_text functions,
