2004-06-19  Sven Neumann  <sven@gimp.org>
	* plug-ins/ifscompose/ifscompose_utils.c (create_brush): use
	G_SQRT2; some coding style cleanups.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13695 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-06-19  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/ifscompose/ifscompose_utils.c (create_brush): use
+	G_SQRT2; some coding style cleanups.
+
+2004-06-19  Sven Neumann  <sven@gimp.org>
+
 	* app/vectors/gimpbezierstroke.c (arcto_ellipsesegment): moved
 	array initialization out of variable declaration (bug #144632).
 
