--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,17 @@
 2004-06-19  Sven Neumann  <sven@gimp.org>
 
+	Applied a patch from Geert Jordaens that implements the
+	GtkStatusbar functionality in GimpStatusbar so that we can redo it
+	in order to fix bug #120175:
+
+	* app/core/gimpmarshal.list: added VOID: UINT, STRING.
+
+	* app/display/gimpstatusbar.[ch]: copied GtkStatusbar code.
+
+	* app/display/gimpdisplayshell.c: changed accordingly.
+
+2004-06-19  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/ifscompose/ifscompose_utils.c (create_brush): use
 	G_SQRT2; some coding style cleanups.
 
