2004-06-19  Michael Natterer  <mitch@gimp.org>
	* modules/Makefile.am
	* modules/controller_midi.c: new controller for MIDI input. Maps
	all note on and note off events and all MIDI controllers to
	GimpContollerEvents. Should parse any MIDI stream. Code based on
	blinkenmedia stuff from Daniel Mack.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13699 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-06-19  Michael Natterer  <mitch@gimp.org>
+
+	* modules/Makefile.am
+	* modules/controller_midi.c: new controller for MIDI input. Maps
+	all note on and note off events and all MIDI controllers to
+	GimpContollerEvents. Should parse any MIDI stream. Code based on
+	blinkenmedia stuff from Daniel Mack.
+
 2004-06-19  Sven Neumann  <sven@gimp.org>
 
 	Applied a patch from Geert Jordaens that implements the
