2004-06-19  Michael Natterer  <mitch@gimp.org>
	* modules/controller_midi.c (midi_read_event): simplified
	swallowing of SysEx messages and unwanted data bytes. Reordered
	and commented stuff to be more readable.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13701 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-06-19  Michael Natterer  <mitch@gimp.org>
 
+	* modules/controller_midi.c (midi_read_event): simplified
+	swallowing of SysEx messages and unwanted data bytes. Reordered
+	and commented stuff to be more readable.
+
+2004-06-19  Michael Natterer  <mitch@gimp.org>
+
 	* modules/Makefile.am
 	* modules/controller_midi.c: new controller for MIDI input. Maps
 	all note on and note off events and all MIDI controllers to
