2004-06-19 Bill Skaggs  <weskaggs@primate.ucdavis.edu>
	* app/tools/gimpscaletool.c: fixed my fix for bug # 68106, which
	worked incorrectly for two of the control points.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13702 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-19 Bill Skaggs  <weskaggs@primate.ucdavis.edu>
+
+	* app/tools/gimpscaletool.c: fixed my fix for bug # 68106, which 
+	worked incorrectly for two of the control points.
+
 2004-06-19  Michael Natterer  <mitch@gimp.org>
 
 	* modules/controller_midi.c (midi_read_event): simplified
