--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-20  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/jpeg.c: removed redundant hboxes and other
+	layout cleanups.
+
 2004-06-20  Philip Lafleur  <plafleur@cvs.gnome.org>
 
 	* app/display/gimpdisplayshell-scale.[ch]:
