--- a/po-script-fu/ChangeLog
+++ b/po-script-fu/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-20  Marco Ciampa <ciampix@libero.it>
+
+	* it.po: Updated italian translation.
+
 2004-06-15  Andras Timar  <timar@gnome.hu>
 
 	* hu.po: Updated Hungarian translation.
