2004-06-20  Sven Neumann  <sven@gimp.org>
	* app/widgets/gimphistogrambox.[ch]: removed the label between the
	spinbuttons, it looks silly. Converted tabs to spaces, removed
	trailing whitespace.

	* app/widgets/gimphistogrameditor.c
	* app/tools/gimpthresholdtool.c: changed accordingly.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13711 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2004-06-20  Sven Neumann  <sven@gimp.org>
+
+	* app/widgets/gimphistogrambox.[ch]: removed the label between the
+	spinbuttons, it looks silly. Converted tabs to spaces, removed
+	trailing whitespace.
+
+	* app/widgets/gimphistogrameditor.c
+	* app/tools/gimpthresholdtool.c: changed accordingly.
+
 2004-06-19  Bill Skaggs  <weskaggs@primate.ucdavis.edu>
 
 	* app/widgets/gimphistogrambox.[ch]:
