Bill Skaggs  <weskaggs@primate.ucdavis.edu>
	* plug-ins:  changed dialogs to follow HIG capitalization style
	wherever they didn't.  Scripts remain to be done.  Partially
	fixes bug #123699.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13712 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,12 @@
 
 2004-06-19  Bill Skaggs  <weskaggs@primate.ucdavis.edu>
 
+	* plug-ins:  changed dialogs to follow HIG capitalization style 
+	wherever they didn't.  Scripts remain to be done.  Partially
+	fixes bug #123699.
+
+2004-06-19  Bill Skaggs  <weskaggs@primate.ucdavis.edu>
+
 	* app/widgets/gimphistogrambox.[ch]:
 	* app/tools/gimpthresholdtool.c: Changed the threshold tool dialog 
 	so that it uses a two-triangle-slider scale of the sort used in the 
