--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-20  Bill Skaggs  <weskaggs@primate.ucdavis.edu>
+
+	* plug-ins/common/url.c: if url does not end in a recognized
+	extension, open it as an unnamed image.  Fixes bug # 118811.
+
 2004-06-20  Sven Neumann  <sven@gimp.org>
 
 	* app/widgets/gimphistogrambox.[ch]: removed the label between the
