--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,9 @@
+2004-06-21  Sven Neumann  <sven@gimp.org>
+
+	* libgimpwidgets/libgimpwidgets-sections.txt
+	* libgimpwidgets/tmpl/gimpwidgets.sgml:
+	added gimp_label_set_attributes().
+
 2004-06-02  Michael Natterer  <mitch@gimp.org>
 
 	* libgimp/libgimp-sections.txt: follow function renaming.
