2004-06-21  Sven Neumann  <sven@gimp.org>
	* app/gui/gui.c (gui_exit_callback): improved message in quit
	dialog just in case that we don't manage to redo this dialog
	before 2.2.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13715 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-06-21  Sven Neumann  <sven@gimp.org>
 
+	* app/gui/gui.c (gui_exit_callback): improved message in quit
+	dialog just in case that we don't manage to redo this dialog
+	before 2.2.
+
+2004-06-21  Sven Neumann  <sven@gimp.org>
+
 	* libgimpwidgets/gimpwidgets.[ch]
 	* libgimpwidgets/gimpwidgets.def: added new utility function
 	gimp_label_set_attributes().
