2004-06-21  Michael Natterer  <mitch@gimp.org>
	* app/widgets/widgets-enums.[ch] (enum GimpCursorFormat): removed
	value GIMP_CURSOR_FORMAT_PIXBUF_PREMULTIPLY because it's the job
	of GDK to do that (it was GDK that was broken, not some of the X
	servers).

	* app/widgets/gimpcursor.c (gimp_cursor_new): premultiply the
	cursor's pixels for GTK+ < 2.4.4.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13716 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2004-06-21  Michael Natterer  <mitch@gimp.org>
+
+	* app/widgets/widgets-enums.[ch] (enum GimpCursorFormat): removed
+	value GIMP_CURSOR_FORMAT_PIXBUF_PREMULTIPLY because it's the job
+	of GDK to do that (it was GDK that was broken, not some of the X
+	servers).
+
+	* app/widgets/gimpcursor.c (gimp_cursor_new): premultiply the
+	cursor's pixels for GTK+ < 2.4.4.
+
 2004-06-21  Sven Neumann  <sven@gimp.org>
 
 	* app/gui/gui.c (gui_exit_callback): improved message in quit
