Bill Skaggs  <weskaggs@primate.ucdavis.edu>
	* plug-ins: finish implementing HIG capitalization in dialogs.
	Scripts remain to be done.  More progress on bug #123699.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13717 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-21  Bill Skaggs  <weskaggs@primate.ucdavis.edu>
+
+	* plug-ins: finish implementing HIG capitalization in dialogs.
+	Scripts remain to be done.  More progress on bug #123699.
+
 2004-06-21  Michael Natterer  <mitch@gimp.org>
 
 	* app/widgets/widgets-enums.[ch] (enum GimpCursorFormat): removed
@@ -34,7 +39,7 @@
 2004-06-20  Bill Skaggs  <weskaggs@primate.ucdavis.edu>
 
 	* plug-ins/common/url.c: if url does not end in a recognized
-	extension, open it as an unnamed image.  Fixes bug # 118811.
+	extension, open it as an unnamed image.  Fixes bug #118811.
 
 2004-06-20  Sven Neumann  <sven@gimp.org>
 
