--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-06-21  Bill Skaggs  <weskaggs@primate.ucdavis.edu>
 
+	* app/gui/file-save-dialog.c: to reduce clutter, hide overwrite
+	query dialog after user has responded.
+	
+2004-06-21  Bill Skaggs  <weskaggs@primate.ucdavis.edu>
+
 	* plug-ins/common/noisify.c: changed handling of alpha
 	channel in an attempt to deal with bug #72853.
 	Changed menu entry from "Noisify" to "Scatter RGB".
