Bill Skaggs  <weskaggs@primate.ucdavis.edu>
	* app/tools/gimptransformoptions.c: use radio buttons
	for constraint options.  Makes all options visible,
	should resolve bug #68106.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13721 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-06-21  Bill Skaggs  <weskaggs@primate.ucdavis.edu>
 
+	* app/tools/gimptransformoptions.c: use radio buttons
+	for constraint options.  Makes all options visible,
+	should resolve bug #68106.
+	
+2004-06-21  Bill Skaggs  <weskaggs@primate.ucdavis.edu>
+
 	* app/gui/file-save-dialog.c: to reduce clutter, hide overwrite
 	query dialog after user has responded.
 	
