--- a/po/it.po
+++ b/po/it.po
@@ -22,7 +22,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gimp 2.0\n"
 "POT-Creation-Date: 2004-06-16 17:39+0200\n"
-"PO-Revision-Date: 2004-06-16 17:42+0200\n"
+"PO-Revision-Date: 2004-06-22 09:17+0200\n"
 "Last-Translator: Marco Ciampa <ciampix@libero.it>\n"
 "Language-Team: gimp@erlug.linux.it\n"
 "MIME-Version: 1.0\n"
@@ -6740,7 +6740,7 @@ msgstr ""
 
 #: app/gui/user-install-dialog.c:718
 msgid "Click \"Continue\" to enter the GIMP user installation."
-msgstr "Cliccare \"Continua\" per avviare l'installazione utente."
+msgstr "Fare clic su \"Continua\" per avviare l'installazione utente."
 
 #: app/gui/user-install-dialog.c:723
 msgid ""
