--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-06-22  Sven Neumann  <sven@gimp.org>
+
+	* tools/pdbgen/pdb/fileops.pdb: app/pdb/fileops_cmds.c is a
+	generated file, need to do the documentation change here.
+
+	* app/pdb/fileops_cmds.c
+	* libgimp/gimpfileops_pdb.c: regenerated.
+
 2004-06-21  Bill Skaggs  <weskaggs@primate.ucdavis.edu>
 
 	* app/tools/gimptransformoptions.c: use radio buttons
