2004-06-22  Sven Neumann  <sven@gimp.org>
	* libgimpwidgets/gimpcolorarea.c (gimp_color_area_set_color): use
	gimp_rgb_distance() for flat color areas. Fixes bug #144786.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13724 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-06-22  Sven Neumann  <sven@gimp.org>
 
+	* libgimpwidgets/gimpcolorarea.c (gimp_color_area_set_color): use
+	gimp_rgb_distance() for flat color areas. Fixes bug #144786.
+
+2004-06-22  Sven Neumann  <sven@gimp.org>
+
 	* tools/pdbgen/pdb/fileops.pdb: app/pdb/fileops_cmds.c is a
 	generated file, need to do the documentation change here.
 
