2004-06-22  Michael Natterer  <mitch@gimp.org>
	* app/tools/gimpclonetool.c (gimp_clone_tool_draw): chain up
	unconditionally now that we draw the brush outline while
	painting. Fixes brush outline artefacts on button_press and
	button_release. Spotted by sjburges.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13727 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-06-22  Michael Natterer  <mitch@gimp.org>
+
+	* app/tools/gimpclonetool.c (gimp_clone_tool_draw): chain up
+	unconditionally now that we draw the brush outline while
+	painting. Fixes brush outline artefacts on button_press and
+	button_release. Spotted by sjburges.
+
 2004-06-22  Sven Neumann  <sven@gimp.org>
 
 	* app/widgets/gimpfiledialog.c (gimp_file_dialog_set_image): unset
