2004-06-22  Sven Neumann  <sven@gimp.org>
	* app/composite/gimp-composite-regression.c: define timersub()
	macro in case it's undefined. Patch by Tim Mooney, fixes 'make
	check' on Tru64 (bug #144780).


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13730 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-06-22  Sven Neumann  <sven@gimp.org>
+
+	* app/composite/gimp-composite-regression.c: define timersub()
+	macro in case it's undefined. Patch by Tim Mooney, fixes 'make
+	check' on Tru64 (bug #144780).
+
 2004-06-22  Bill Skaggs  <weskaggs@primate.ucdavis.edu>
 
 	* app/tools/gimpcurvestool.c: added Store/Recall buttons for
