--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-06-22  Bill Skaggs  <weskaggs@primate.ucdavis.edu>
+
+	* plug-ins/script-fu/scripts: HIG-ified capitalization on
+	all.  Finishes this for everything in plug-ins.  Bug #123699 is
+	now mostly fixed.
+	
 2004-06-22  Sven Neumann  <sven@gimp.org>
 
 	* app/composite/gimp-composite-regression.c: define timersub()
