Bill Skaggs  <weskaggs@primate.ucdavis.edu>
	* app/tools/gimpcurvestool.c: try again to revert.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13734 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-06-22  Bill Skaggs  <weskaggs@primate.ucdavis.edu>
 
+	* app/tools/gimpcurvestool.c: try again to revert.
+	
+2004-06-22  Bill Skaggs  <weskaggs@primate.ucdavis.edu>
+
 	* app/tools/gimpcurvestool.c: reverted.
 	
 2004-06-22  Bill Skaggs  <weskaggs@primate.ucdavis.edu>
